--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -5,7 +5,7 @@ body
   font-family: $font-family, sans-serif
   max-width: 1500px
   margin: 0 auto
-  background: #fff
+  background: #f3f3f3
 
 input, button, textarea 
   font-family: Open Sans, sans-serif
