--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -11,3 +11,34 @@
   &:hover 
     box-shadow: 0 0 10px #fff
     color: #fff
+
+.liveroom 
+  width: 370px
+  min-height: 250px
+  border-bottom: 4px solid $dark
+  &__top 
+    display: flex
+    justify-content: space-between  
+    align-items: center
+    min-height: 50px
+    padding: 20px 
+    background-color: $light
+    color: #fff
+  &__title 
+    font-size: 18px 
+    font-weight: 600
+    text-transform: uppercase
+    span 
+      font-style: italic
+      font-weight: 400
+  &__room 
+    font-size: 11px 
+    font-weight: 600
+    text-transform: uppercase
+  &__image
+    display: block
+    height: 200px
+    object-fit: cover
+    object-position: top
+
+      
