--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,8 @@
 
 @import 'index/_upperheader'
 @import 'index/_header'
+@import 'index/_main__title'
+@import 'index/_main__liverooms'
 
 
-@import '_common-styles'
+@import '_base'
