--- a/src/sass/index/_upperheader.sass
+++ b/src/sass/index/_upperheader.sass
@@ -10,7 +10,7 @@
     top: 145px
     left: 165px
     width: 540px
-    max-height: 235px
+    min-height: 235px
     background: $light 
     padding: 20px 0px 20px 15px
     border-bottom: 5px solid $dark
