--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -3,6 +3,11 @@
   justify-content: center
   align-items: center
 
+%flex-between
+  display: flex
+  justify-content: space-between
+  align-items: center
+
 // @mixin media($_size) 
 //     @media (min-width: $_size) 
 //         @content
