--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,6 +8,7 @@
 @import 'index/_header'
 @import 'index/_main__title'
 @import 'index/_main__liverooms'
+@import 'index/_main__classes-and-prices'
 
 
 @import '_base'
