--- a/src/sass/index/_header.sass
+++ b/src/sass/index/_header.sass
@@ -47,6 +47,7 @@
   &__navbar
     &-list
       display: flex
+      flex-wrap: wrap
       align-items: center
       justify-content: space-between
   &__button-link 
