--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -8,6 +8,13 @@
   justify-content: space-between
   align-items: center
 
+%main-title
+  font-family: $font-condested
+  font-size: 30px 
+  font-weight: 300 
+  text-transform: uppercase
+  color: $title-color
+
 // @mixin media($_size) 
 //     @media (min-width: $_size) 
 //         @content
