--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,5 @@
-@import '_mixins'
 @import '_variables'
+@import '_mixins'
 @import '_general'
 
 @import '_templates'
@@ -9,6 +9,7 @@
 @import 'index/_main__title'
 @import 'index/_main__liverooms'
 @import 'index/_main__classes-and-prices'
+@import 'index/_main__info'
 
 
 @import '_base'
