--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,7 @@
 @import 'index/_main__liverooms'
 @import 'index/_main__classes-and-prices'
 @import 'index/_main__info'
+@import 'index/_gallery-partner'
 
 
 @import '_base'
