--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'index/_main__classes-and-prices'
 @import 'index/_main__info'
 @import 'index/_gallery-partner'
+@import 'index/_comment'
 
 
 @import '_base'
