--- a/src/sass/index/_header.sass
+++ b/src/sass/index/_header.sass
@@ -23,10 +23,6 @@
     transition: 0.3s
     &:hover 
       color: $hover-color
-  &__links
-    display: flex
-    justify-content: space-between
-    min-width: 200px
   &__link-icon
     width: 18px
     height: 18px
@@ -42,8 +38,6 @@
       justify-content: space-between
       min-height: 100px
       padding: 0px 50px 0px 10px
-  &__logo
-    min-width: 135px
   &__navbar
     &-list
       display: flex
@@ -127,6 +121,11 @@
         &:before 
           background-image: url("data:image/svg+xml,%3Csvg fill='%23fff' version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 512.002 512.002' style='enable-background:new 0 0 512.002 512.002;' xml:space='preserve'%3E%3Cg%3E%3Cg%3E%3Cpath d='M388.425,241.951L151.609,5.79c-7.759-7.733-20.321-7.72-28.067,0.04c-7.74,7.759-7.72,20.328,0.04,28.067l222.72,222.105 L123.574,478.106c-7.759,7.74-7.779,20.301-0.04,28.061c3.883,3.89,8.97,5.835,14.057,5.835c5.074,0,10.141-1.932,14.017-5.795 l236.817-236.155c3.737-3.718,5.834-8.778,5.834-14.05S392.156,245.676,388.425,241.951z'/%3E%3C/g%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A")
   
-        
+.logo
+  display: block
+  width: 128px
 
-
+.links
+  display: flex
+  justify-content: space-between
+  min-width: 200px
