--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -12,6 +12,7 @@
 @import 'index/_main__info'
 @import 'index/_gallery-partner'
 @import 'index/_comment'
+@import 'index/_footer'
 
 
 @import '_base'
