our trainers start

--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -292,7 +292,24 @@
   &__date 
     font-size: 13px 
     color: #000
-    
+
+.underheader-bg 
+  min-height: 300px
+  position: relative
+  background: url(/img/about/about-us_bg.jpg) no-repeat
+  background-size: cover
+  border-bottom: 10px solid $dark 
+  &:before 
+    position: absolute
+    content: 'About us'
+    bottom: 0
+    left: 170px
+    font-size: 30px
+    font-weight: 300
+    padding: 8px 40px
+    text-transform: uppercase
+    color: #fff
+    background-color: $dark
 
 
   
