--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'index/_comment'
 @import 'index/_footer'
 
+@import 'about/_about__trainer-bigtitle'
+@import 'about/_about__our-trainers'
 
 @import '_base'
