--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -311,6 +311,78 @@
     color: #fff
     background-color: $dark
 
+.join 
+  background-color: $dark
+  &__wrapper
+    display: flex
+    padding: 34px 100px 34px 0
+  &__join 
+    max-width: 560px
+    text-align: center
+    color: #fff 
+    &-title 
+      font-size: 30px
+      font-weight: 600
+      text-transform: uppercase
+      margin-bottom: 5px 
+    &-subtitle 
+      font-size: 24px
+      font-weight: 600
+      margin-bottom: 20px
+    &-text 
+      font-size: 14px 
+      line-height: 21px
+      margin-bottom: 10px
+    &-btn
+      @extend %flex-center 
+      margin: 0 auto
+      padding: 12px 100px
+      border: none
+      border-radius: 3px
+      font-size: 12px 
+      text-transform: uppercase
+      background-color: #ff0000 
+      color: #fff
+  &__divide 
+    width: 1px 
+    height: 180px
+    border: none 
+    background-color: rgba(#fff, 0.5)
+  &__member 
+    max-width: 370px
+    text-align: center
+    color: #000
+    &-title 
+      font-size: 30px 
+      font-weight: 600 
+      margin-bottom: 5px 
+    &-subtitle 
+      font-size: 24px 
+      font-weight: 600 
+      margin-bottom: 20px 
+    &-text 
+      font-size: 14px 
+      line-height: 21px 
+      margin-bottom: 10px 
+    &-btn
+      display: inline-flex
+      align-items: center
+      justify-content: center
+      width: 130px
+      min-height: 40px
+      font-size: 12px 
+      text-transform: uppercase
+      border-radius: 3px
+      color: $light
+      background-color: #fff
+      &--calendar 
+        margin-left: 37px
+        color: #fff 
+        background-color: $light
+
+
+
+
 
   
 
