--- a/src/sass/about/_about__our-trainers.sass
+++ b/src/sass/about/_about__our-trainers.sass
@@ -9,13 +9,14 @@
     display: flex
     flex-wrap: wrap
     justify-content: space-between
+    align-content: space-between
     min-height: 530px
   &__block
     display: flex
-    justify-content: space-between
+    align-items: center
     width: 370px
     min-height: 250px
-    padding: 30px 25px
+    padding: 20px 25px
     background-color: $dark
   &__name, &__spec, &__info
     color: #fff
@@ -26,9 +27,11 @@
     border: none
     background-color: #fff
   &__trainer
+    max-width: 130px
     text-align: center
   &__text
     color: #fff 
+    max-width: 152px
   &__quals, &__speciality
     font-size: 11px 
     font-weight: 600
