--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -16,5 +16,6 @@
 
 @import 'about/_about__trainer-bigtitle'
 @import 'about/_about__our-trainers'
+@import 'about/_about__comment'
 
 @import '_base'
