--- a/src/sass/index/_main__title.sass
+++ b/src/sass/index/_main__title.sass
@@ -6,7 +6,7 @@
       display: flex
       align-items: center
       justify-content: space-between
-      padding: 0px 90px 
+      padding: 20px 90px 0 
     &-image
       width: 300px
     &-img
