--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -310,6 +310,12 @@
     text-transform: uppercase
     color: #fff
     background-color: $dark
+  &--classes
+    background: url(/img/classes/classes-bg.jpg) no-repeat
+    background-size: cover
+    background-position-y: -100px
+    &:before 
+      content: 'classes'
 
 .join 
   background-color: $dark
