--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,4 +18,7 @@
 @import 'about/_about__our-trainers'
 @import 'about/_about__comment'
 
+@import 'classes/_classes__classes'
+@import 'classes/_classes__classes-list'
+
 @import '_base'
