--- a/src/sass/classes/_classes__classes-list.sass
+++ b/src/sass/classes/_classes__classes-list.sass
@@ -1,3 +1,6 @@
 .classes
-  &__wrapper 
-    
+  &__classes-list
+    margin-bottom: 100px;
+    &-wrapper 
+      display: flex
+      justify-content: space-between
