--- a/src/sass/classes/_classes__classes.sass
+++ b/src/sass/classes/_classes__classes.sass
@@ -61,5 +61,17 @@
     color: #ffffff
     &--second 
       margin-left: 65px
+
+.class-block--light 
+  .class-block
+    &__info 
+      background-color: #fff
+      color: $dark 
+    &__btn 
+      border-color: $dark 
+      color: $dark
+
+
+
     
   
