--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -11,6 +11,7 @@
 @import 'index/_main__classes-and-prices'
 @import 'index/_main__info'
 @import 'index/_gallery-partner'
+@import 'index/_main__map'
 @import 'index/_comment'
 @import 'index/_footer'
 
@@ -20,5 +21,11 @@
 
 @import 'classes/_classes__classes'
 @import 'classes/_classes__classes-list'
+
+@import 'timetable/_timetable__table'
+
+@import 'pricing/_pricing__pricing-plans'
+@import 'pricing/_pricing__contacts'
+@import 'pricing/_pricing__class-event'
 
 @import '_base'
