--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -28,4 +28,6 @@
 @import 'pricing/_pricing__contacts'
 @import 'pricing/_pricing__class-event'
 
+@import 'contact/_contact__message'
+
 @import '_base'
