--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -254,10 +254,11 @@
     color: #292929
   &__text 
     font-size: 12px 
+    line-height: 14px
     margin-bottom: 4px
   &__btn 
     display: inline-block
-    padding: 3px 20px 
+    padding: 1px 20px 
     font-size: 10px
     text-transform: uppercase
     color: #fe0000
@@ -278,16 +279,16 @@
     margin-bottom: 25px 
   &__block 
     min-height: 250px 
-    padding: 12px 20px 
+    padding: 10px 20px 
     background-color: #d4d6d6
   &__event 
     display: flex
     min-height: 70px
-    margin-bottom: 9px
+    margin-bottom: 10px
     &:last-child
       margin-bottom: 0
   &__img 
-    display: inline-block
+    display: block
     width: 70px
     height: 70px
     margin-right: 20px
