--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -29,5 +29,6 @@
 @import 'pricing/_pricing__class-event'
 
 @import 'contact/_contact__message'
+@import 'contact/_contact__content'
 
 @import '_base'
