--- a/src/sass/contact/_contact__message.sass
+++ b/src/sass/contact/_contact__message.sass
@@ -1,4 +1,5 @@
 .contact-info 
+  margin-bottom: 100px
   background-color: $dark
   &__wrapper
     display: flex
@@ -15,13 +16,18 @@
     margin-bottom: 5px
   &__subtitle 
     font-size: 14px
-    margin-bottom: 5px
+    margin-bottom: 15px
   &__input
     max-width: 212px
     width: 100%
     height: 35px
+    padding: 10px
     margin-right: 15px
-    margin-bottom: 5px
+    margin-bottom: 15px
+    background-color: rgba(#fff, 0.5)
+    color: #fff
+    border: none
+    outline: none
     &:nth-of-type(3)
       margin-right: 0
   &__input-name 
@@ -32,14 +38,49 @@
     max-width: 443px
     width: 100%
     margin-right: 20px
+    padding: 10px
+    background-color: rgba(#fff, 0.5)
+    color: #fff
+    border: none
+    outline: none
   &__btn 
+    @extend %flex-center
     width: 212px 
     height: 35px
     padding: 10px 20px 
     color: #fff 
     background-color: #e25050
+    text-transform: uppercase
+    border: none 
+    outline: none
+    margin-bottom: 15px
   &__valid 
-    display: inline
+    font-size: 14px
+    font-weight: 300
 
 .info 
   width: 370px
+  color: #fff
+  &__title 
+    font-size: 14px 
+    font-weight: 300
+    text-transform: uppercase
+    margin-bottom: 35px 
+  &__text 
+    font-size: 12px 
+    line-height: 21px 
+    margin-bottom: 35px 
+  &__phone, &__email
+    display: flex
+    align-items: center
+    font-size: 14px 
+    margin-bottom: 5px 
+    color: #fff
+  &__phone-icon, &__email-icon
+      width: 15px 
+      height: 15px 
+      fill: #fff  
+      margin-right: 10px 
+
+
+
