single class complete

--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -338,6 +338,28 @@
     background: none
     &:before 
       content: 'Contacts'
+  &--pilates 
+    background: url(/img/class-single/pilates-bg.jpg)
+    background-size: cover
+    margin-bottom: 100px
+    &:before 
+      display: none
+  &--pilates-title 
+    position: absolute
+    bottom: -5px
+    left: 170px
+    font-size: 30px
+    font-weight: 300
+    padding: 8px 40px
+    text-transform: uppercase
+    color: #fff
+    background-color: $dark
+    span 
+      font-size: 15px
+  &__icon 
+    width: 10px 
+    height: 10px
+    fill: #fff
 
 .join 
   background-color: $dark
