--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -31,4 +31,8 @@
 @import 'contact/_contact__message'
 @import 'contact/_contact__content'
 
+@import 'pilates/_pilates__content'
+
+
+
 @import '_base'
