--- a/src/sass/index/_gallery-partner.sass
+++ b/src/sass/index/_gallery-partner.sass
@@ -1,5 +1,6 @@
 .gallery-partner
   background-color: #e6e6e6
+  margin-bottom: 100px
   &__wrapper
     @extend %flex-between
     padding: 37px 0 74px
@@ -17,7 +18,6 @@
         justify-content: space-between
   &__partner 
     width: 256px
-    margin-right: 63px
     &-title
       @extend %main-title 
       text-align: center
