--- a/src/sass/index/_header.sass
+++ b/src/sass/index/_header.sass
@@ -36,7 +36,7 @@
       align-items: center
       justify-content: space-between
       min-height: 100px
-      padding: 0px 50px 0px 10px
+      padding: 0px 10px
   &__navbar
     &-list
       display: flex
