--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -53,6 +53,7 @@
 
 .all-classes
   max-width: 770px
+  position: relative
   &__title 
     @extend %main-title
     color: $title-color
@@ -62,6 +63,14 @@
     min-height: 250px
     padding: 16px 32px
     background-color: $light
+    &:before 
+      position: absolute 
+      content: ''
+      bottom: 10%
+      left: 50%
+      width: 1px 
+      height: 180px 
+      background-color: rgba(#fff, 0.6)
   &__list 
     display: flex
     flex-wrap: wrap
@@ -168,19 +177,21 @@
     margin-bottom: 25px 
     text-align: center
   &__block 
-    display: flex
-    justify-content: space-between
+    width: 100%
     min-height: 250px 
     padding: 20px 30px 25px
     background-color: #fff
     hr 
-      width: 1px
-      height: 180px
+      width: 1px 
+      height: 180px 
+      background-color: $light
       border: none
-      background-color: #a9ddf1
+  &__slider-block 
+    display: flex
   &__trainer 
-    width: 145px
+    position: relative
     min-height: 128px
+    padding: 0 10px
     text-align: center
   &__img 
     display: block
@@ -441,6 +452,9 @@
         color: #fff 
         background-color: $light
         
+
+
+
 
 
 
