--- a/src/sass/index/_upperheader.sass
+++ b/src/sass/index/_upperheader.sass
@@ -7,12 +7,14 @@
     max-width: 455px
   &__info 
     position: absolute
+    display: flex
+    flex-wrap: wrap
     top: 145px
     left: 165px
     width: 540px
     min-height: 235px
     background: $light 
-    padding: 20px 0px 20px 15px
+    padding: 20px 15px
     border-bottom: 5px solid $dark
     color: #fff
     &-title
@@ -28,9 +30,60 @@
     &-text 
       font-size: 14px
       font-weight: 300 
-      margin-bottom: 10px
+      margin-bottom: 20px
   &__button-link
-    display: block
-    text-align: center
-    max-width: 145px
+    position: relative
+    @extend %flex-center
+    padding: 10px 30px
+    min-width: 200px
     margin: 0 auto
+    overflow: hidden
+    span 
+      position: relative 
+      left: 0%
+      opacity: 1
+      transition: 0.5s
+    &:hover span 
+      left: 110%
+      opacity: 0
+    &:before
+      position: absolute
+      @extend %flex-center
+      content: 'Узнать больше'
+      top: 0
+      left: -101%
+      width: 100%
+      height: 100%
+      background-color: $dark
+      color: #fff
+      transition: 0.5s 
+    &:hover:before
+      left: 0%
+  &__arrow 
+    position: absolute 
+    width: 100px
+    height: 100px
+    bottom: 2%
+    left: 50%
+    transform: translateX(-50%)
+    &-icon 
+      width: 100px
+      height: 100px
+      transform: rotate(90deg)
+      fill: rgba($light, 0.6)
+      animation: arrow-shadow 2s ease-in-out infinite alternate
+
+@keyframes arrow-shadow
+  from 
+    filter: drop-shadow(0 0 3px #fff)
+  to
+    filter: drop-shadow(0 0 20px #fff)
+ 
+
+
+
+
+
+
+
+
