--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -171,7 +171,7 @@
       margin: 0 auto 24px
 
 .trainers 
-  width: 370px 
+  max-width: 370px 
   &__title 
     @extend %main-title
     margin-bottom: 25px 
@@ -190,6 +190,7 @@
     display: flex
   &__trainer 
     position: relative
+    width: 160px
     min-height: 128px
     padding: 0 10px
     text-align: center
