--- a/src/sass/index/_footer.sass
+++ b/src/sass/index/_footer.sass
@@ -25,14 +25,19 @@
     opacity: 0.5
     margin-bottom: 13px 
   &__btn 
-    width: 212px
-    padding: 8px 20px 
+    max-width: 220px
+    padding: 8px 15px 
     border: none
     font-size: 12px
     text-align: start
     text-transform: uppercase
     color: #fff 
     background-color: #e25050
+    &-arrow 
+      width: 10px
+      height: 10px
+      margin-left: 8px
+      fill: #fff
   &__logo
     margin-bottom: 22px
     margin: 0 auto 15px
