--- a/src/sass/index/_gallery-partner.sass
+++ b/src/sass/index/_gallery-partner.sass
@@ -3,7 +3,7 @@
   margin-bottom: 100px
   &__wrapper
     @extend %flex-between
-    padding: 37px 0 74px
+    padding: 37px 50px 74px 0
   &__gallery
     width: 770px
     &-title 
