--- a/src/sass/_templates.sass
+++ b/src/sass/_templates.sass
@@ -311,6 +311,7 @@
     height: 70px
     margin-right: 20px
     background-color: #fff 
+    object-fit: cover
   &__text 
     font-size: 13px 
     color: #fff 
