--- a/src/sass/classes/_classes__classes.sass
+++ b/src/sass/classes/_classes__classes.sass
@@ -38,6 +38,7 @@
       border-radius: 50%
       float: left
       margin-right: 5px
+      object-fit: cover
   &__spec 
     font-size: 11px
     font-weight: 600
