--- a/src/sass/about/_about__our-trainers.sass
+++ b/src/sass/about/_about__our-trainers.sass
@@ -40,6 +40,8 @@
   &__quals-text, &__speciality-text
     font-size: 11px 
     font-weight: 300
+  &__quals-text 
+    margin-bottom: 10px
 
 .our-trainers__block--light 
   background-color: #fff
