slider and text

--- a/src/sass/_base.sass
+++ b/src/sass/_base.sass
@@ -1,3 +1,5 @@
+//Display
+
 .display-block
   display: block
 
@@ -8,4 +10,30 @@
   position: fixed 
   top: 50px 
   left: 10px
+
+// Colors
+
+.no-color 
+  visibility: hidden
+
+.red-color 
+  color: #ff0000 
+
+.purpur-color 
+  color: #c102c3
+
+.blue-color 
+  color: #0295c3 
+
+.light-green 
+  color: #00b398
+
+.green-color 
+  color: #116800
+
+.black-color 
+  color: #0c0f00
+
+.background-white 
+  background-color: #fff
 
