--- a/src/sass/blog/_blog__main.sass
+++ b/src/sass/blog/_blog__main.sass
@@ -66,6 +66,9 @@
     border: none
     margin: 70px 0 40px 
     background-color: #e5e6e6
+  &__video 
+    width: 100%
+    height: 400px
 
 .blog
   &-aside 
@@ -177,6 +180,7 @@
   &-pages 
     display: flex
     align-items: center
+    margin-top: 15px
     &__btn 
       padding: 7px 20px 
       border: none
@@ -193,7 +197,7 @@
       padding: 10px
       font-size: 14px 
       font-weight: 600 
-
+  
 
 .schedule--blog 
   position: static
