--- a/src/sass/timetable/_timetable__table.sass
+++ b/src/sass/timetable/_timetable__table.sass
@@ -1,6 +1,8 @@
 .timetable
   &__table-wrapper 
     padding: 60px 0 100px
+  .gallery-partner 
+    margin-bottom: 0
     
 .table 
   &__nav 
@@ -14,6 +16,7 @@
     padding: 5px 10px 
     font-family: $font-condested
     font-size: 30px 
+    text-transform: uppercase
     color: $light 
     border: 1px solid $light 
     border-radius: 3px
