--- a/src/sass/classes/_classes__classes.sass
+++ b/src/sass/classes/_classes__classes.sass
@@ -6,6 +6,9 @@
     align-content: space-between
     min-height: 990px
     padding: 85px 0px 
+  &__main 
+    .gallery-partner 
+      margin-bottom: 0
 
 .class-block
   display: flex
@@ -43,16 +46,16 @@
     font-size: 11px
     font-weight: 600
     text-transform: uppercase
-    margin-bottom: 5px 
+    margin-bottom: 10px 
   &__name 
     font-size: 14px
     font-weight: 600 
     text-transform: uppercase
-    margin-bottom: 5px
+    margin-bottom: 10px
   &__text 
     font-size: 12px
     font-style: italic
-    margin-bottom: 20px
+    margin-bottom: 25px
   &__btn
     display: inline-block
     padding: 1px 10px
