--- a/src/sass/index/_upperheader.sass
+++ b/src/sass/index/_upperheader.sass
@@ -3,6 +3,8 @@
   background: url(../img/index/upperheader_bg.jpg) no-repeat 
   background-size: cover
   position: relative
+  @include media($tablet)
+    display: none
   &__text
     max-width: 455px
   &__info 
