--- a/src/sass/pilates/_pilates__content.sass
+++ b/src/sass/pilates/_pilates__content.sass
@@ -1,4 +1,8 @@
 .pilates
+  &-main 
+    padding-top: 100px
+    .join 
+      margin-bottom: 0
   &__blocks
     margin-bottom: 100px
   &__prices
@@ -20,6 +24,8 @@
   &__img 
     display: block
     height: 300px 
+    object-fit: cover
+    object-position: top
   &__text
     font-size: 14px
     line-height: 22px
