--- a/src/sass/contact/_contact__content.sass
+++ b/src/sass/contact/_contact__content.sass
@@ -1,3 +1,7 @@
+.contact__main 
+  .gallery-partner 
+    margin-bottom: 0
+
 .contact-content
   min-height: 500px
   margin-bottom: 100px
@@ -19,7 +23,7 @@
   max-width: 770px
   width: 100%
   padding: 10px 20px 5px
-  margin-top: 81px
+  margin-top: 50px
   background-color: $dark
   .join__join
     &-info 
@@ -30,10 +34,10 @@
       max-width: 420px
     &-title 
       font-size: 26px
-      margin-bottom: 0
+      margin-bottom: 10px
     &-subtitle  
       font-size: 18px
-      margin-bottom: 0
+      margin-bottom: 15px
     &-text 
       font-size: 13px
       line-height: 14px
