--- a/src/sass/index/_gallery-partner.sass
+++ b/src/sass/index/_gallery-partner.sass
@@ -4,9 +4,14 @@
   &__wrapper
     @extend %flex-between
     padding: 37px 50px 74px 0
+    @include media($desktop) 
+      flex-direction: column
+      padding: 20px 50px 
   &__gallery
     width: 770px
-    &-title 
+    @include media($desktop) 
+      margin-bottom: 30px
+    &-title
       @extend %main-title 
       text-align: center
       margin-bottom: 25px 
@@ -18,6 +23,8 @@
       justify-content: space-between 
   &__partner 
     width: 256px
+    @include media($desktop)  
+      width: 400px
     &-title
       @extend %main-title 
       text-align: center
@@ -27,6 +34,8 @@
     flex-wrap: wrap
     justify-content: space-between
     min-height: 290px
+    @include media($desktop) 
+      min-height: 0
 
 .carousel-img 
   width: 253px
