--- a/src/sass/index/_main__info.sass
+++ b/src/sass/index/_main__info.sass
@@ -2,3 +2,10 @@
   margin-bottom: 84px
   &-wrapper 
     @extend %flex-between
+    @include media($desktop) 
+      justify-content: space-evenly
+
+.main-index 
+  .from-blog
+    @include media($desktop) 
+      display: none
