--- a/src/sass/index/_main__liverooms.sass
+++ b/src/sass/index/_main__liverooms.sass
@@ -4,4 +4,15 @@
     display: flex
     align-items: center
     justify-content: space-between
+    @include media($desktop) 
+      justify-content: space-evenly
+    @include media($tablet) 
+      flex-direction: column
+      align-items: center
+  .main__liveroom-link 
+    &:last-child
+      .liveroom 
+        margin-bottom: 0
+
+      
 
