--- a/src/sass/index/_main__map.sass
+++ b/src/sass/index/_main__map.sass
@@ -40,6 +40,7 @@
     margin-left: auto
   &__info 
     font-size: 16px
+    margin-bottom: 10px
   &__subtext 
     font-size: 30px
     font-style: italic
