--- a/src/sass/index/_main__title.sass
+++ b/src/sass/index/_main__title.sass
@@ -7,8 +7,14 @@
       align-items: center
       justify-content: space-between
       padding: 20px 90px 0 
+      @include media($desktop)
+        padding: 20px 50px 0
     &-image
       width: 300px
+      align-self: flex-end
+      @include media($desktop)
+        min-width: 250px
+        margin-right: 20px
     &-img
       display: block
     &-text 
